tests/errors/sem_aug_sub_int.kt
fun main() {
var x: Int = 10
x -= 5.5  
}
